tests/ui/const-generics/generic_const_exprs/non-local-const.stderr
error: the constant `'a'` is not of type `usize`
  --> $DIR/non-local-const.rs:11:14
   |
LL | impl Foo for [u8; non_local_type_const::NON_LOCAL_CONST] {}
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `char`
   |
   = note: the length of array `[u8; 'a']` must be type `usize`

error: aborting due to 1 previous error

